--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <img id="logo_chata" src="./img/Ativo 7.svg" alt="Logo Atelie do som">
 
                     <nav id="menu" class="links">
-                        <a href="#sobreNos">Sobre Nós</a>
-                        <a href="#cursos">Nossos Cursos</a>
-                        <a href="#instrumentos">Instrumentos</a>
+                        <a href="#sobre">Sobre Nós</a>
+                        <a href="#feitos-curso">Nossos Cursos</a>
+                        <a href="#noticias">Noticias</a>
                         <a href="#contato">Contate-Nos</a>
                     </nav>
 
@@ -96,7 +96,8 @@
 
             <div class="conteudo-sobre">
                 <div class="titulo">
-                    <h2 class="sobre">Sobre<span>Nós</span> </h2>
+                    <h2 class="sobre">Sobre<span>Nós</span></h2>
+              ``
                 </div>
                 <p>A escola nasceu da união de músicos e educadores que viram a falta de métodos acessíveis e práticos
                     no ensino musical. Além das aulas, oferece instrumentos e acessórios a preços justos. Seu objetivo é
@@ -167,7 +168,7 @@
         </section>
         <section id="parallax"></section>
 
-        <section id="feitos-curso" class="conteudo-sobre">
+        <section id="noticias" class="conteudo-sobre">
             <div class="titulo">
                 <h2>Nossas</h2>
                 <span>Noticias</span>
